# py-simpleSim

./: .gitignore  Dockerfile  Jenkinsfile  README.md  main.cpp  master.sln  master.vcxproj  sample.sln  test_sample.py
Debug/: sample.ilk
Release/: attem2.vcxproj.FileListAbsolute.txt
Release/attem2.tlog/: CL.command.1.tlog  (+7 more)
build_scripts/: Dockerfile  Jenkinsfile
c_module_source/: setup.py
docker_examples/: Dockerfile
python_examples/: moduletest.py  physpeer.py  python_test.ipynb
sample/: CMakeLists.txt  Source.cpp  base_utils.cpp  base_utils.h  complex_obj.cpp  complex_obj.h  compound_obj.cpp  compound_obj.h  main.cpp  object_utils.cpp  object_utils.h  packages.config  sample.vcxproj  sample.vcxproj.filters  serializer.cpp  serializer.h  setup.py  simple_objects.cpp  simple_objects.h
sample/Debug/: sample.vcxproj.FileListAbsolute.txt  vc142.idb
sample/Debug/sample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample.lastbuildstate  sample.write.1u.tlog
sample/bullet_example_files/: wheel_obj.cpp  wheel_obj.h
sample/python_example/: import.json  test.py
sample/src/: Makefile  main.cpp  pyMain.cpp
sample/src/objects/: Makefile  complexObject.cpp  complexObject.h  compoundObject.cpp  compoundObject.h  objectWrapper.cpp  objectWrapper.h
sample/src/utility/: Makefile  irr_debug_draw.cpp  irr_debug_draw.h  range_finder.cpp  range_finder.h  region.cpp  region.h  utilities.cpp  utilities.h
sample/x64/Debug/: vc142.idb
sample/x64/Debug/sample.tlog/: sample.lastbuildstate
(+62 files in other folders)
